<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryLight">

    <!-- welcomeHeading -->
    <TextView
        android:id="@+id/welcomeHeading"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@style/heading"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Consent heading-->
    <TextView
        android:id="@+id/consentFormHeading"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/consent_form_heading"
        android:textAppearance="@style/underline_heading"
        app:layout_constraintEnd_toEndOf="@+id/welcomeHeading"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toBottomOf="@+id/welcomeHeading" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/consentFormScrollView"
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_box"
        app:layout_constraintEnd_toEndOf="@+id/welcomeHeading"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toBottomOf="@+id/consentFormHeading"
        android:padding="15dp">

        <TextView
            android:id="@+id/consentFormData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/consent_form_data"
            android:textAppearance="@style/body_text" />
    </ScrollView>

    <EditText
        android:id="@+id/nameTextBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName"
        android:textAppearance="@style/body_text"
        app:layout_constraintEnd_toEndOf="@+id/welcomeHeading"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toBottomOf="@+id/consentFormScrollView"
        tools:ignore="Autofill"
        android:background="@drawable/text_box"
        android:padding="15dp"/>

    <CheckBox
        android:id="@+id/consentCheckbox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/agreement"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/body_text"
        app:layout_constraintEnd_toEndOf="@+id/welcomeHeading"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toBottomOf="@+id/nameTextBox" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/start"
        android:background="@drawable/button"
        android:textAppearance="@style/button_text"
        app:layout_constraintEnd_toEndOf="@+id/welcomeHeading"
        app:layout_constraintStart_toStartOf="@+id/welcomeHeading"
        app:layout_constraintTop_toBottomOf="@+id/consentCheckbox"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>